--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -130,7 +130,7 @@ body {
 }
 .overlayMenu > :nth-child(2) .menuClose {
   position: absolute;
-  right: 1%;
+  right: 3%;
   top: 3%;
 }
 .overlayMenu > :nth-child(2) .menuClose > div {
@@ -165,28 +165,77 @@ body {
 .overlayMenuOpen > :nth-child(2) > :nth-child(2) > :nth-child(1) {
   -webkit-transition-delay: 1s;
           transition-delay: 1s;
+  display: none;
 }
 .overlayMenuOpen > :nth-child(2) > :nth-child(2) > :nth-child(2) {
   -webkit-transition-delay: 1.1s;
           transition-delay: 1.1s;
+  display: none;
 }
 .overlayMenuOpen > :nth-child(2) > :nth-child(2) > :nth-child(3) {
   -webkit-transition-delay: 1.2s;
           transition-delay: 1.2s;
+  display: none;
 }
 .overlayMenuOpen > :nth-child(2) > :nth-child(2) > :nth-child(4) {
   -webkit-transition-delay: 1.3s;
           transition-delay: 1.3s;
+  display: none;
 }
 .overlayMenuOpen > :nth-child(2) > :nth-child(2) > :nth-child(5) {
   -webkit-transition-delay: 1.4s;
           transition-delay: 1.4s;
+  display: none;
 }
 .overlayMenuOpen > :nth-child(2) > :nth-child(2) > :nth-child(6) {
   -webkit-transition-delay: 1.5s;
           transition-delay: 1.5s;
 }
 
+@media (max-width: 800px) {
+  .overlayMenuOpen > :nth-child(2) > :nth-child(2) > :nth-child(1) {
+    -webkit-transition-delay: 1s;
+            transition-delay: 1s;
+    display: block;
+  }
+  .overlayMenuOpen > :nth-child(2) > :nth-child(2) > :nth-child(2) {
+    -webkit-transition-delay: 1.1s;
+            transition-delay: 1.1s;
+    display: block;
+  }
+  .overlayMenuOpen > :nth-child(2) > :nth-child(2) > :nth-child(3) {
+    -webkit-transition-delay: 1.2s;
+            transition-delay: 1.2s;
+    display: none;
+  }
+  .overlayMenuOpen > :nth-child(2) > :nth-child(2) > :nth-child(4) {
+    -webkit-transition-delay: 1.3s;
+            transition-delay: 1.3s;
+    display: none;
+  }
+  .overlayMenuOpen > :nth-child(2) > :nth-child(2) > :nth-child(5) {
+    -webkit-transition-delay: 1.4s;
+            transition-delay: 1.4s;
+    display: none;
+  }
+}
+@media (max-width: 500px) {
+  .overlayMenuOpen > :nth-child(2) > :nth-child(2) > :nth-child(3) {
+    -webkit-transition-delay: 1.2s;
+            transition-delay: 1.2s;
+    display: block;
+  }
+  .overlayMenuOpen > :nth-child(2) > :nth-child(2) > :nth-child(4) {
+    -webkit-transition-delay: 1.3s;
+            transition-delay: 1.3s;
+    display: block;
+  }
+  .overlayMenuOpen > :nth-child(2) > :nth-child(2) > :nth-child(5) {
+    -webkit-transition-delay: 1.4s;
+            transition-delay: 1.4s;
+    display: block;
+  }
+}
 .content {
   position: absolute;
   z-index: 10;
@@ -491,6 +540,12 @@ body {
   font-size: 1.95rem;
   color: white;
 }
+.content .intContent main section > :nth-child(1) > :nth-child(1) > :nth-child(2) h2::-moz-selection {
+  background: none;
+}
+.content .intContent main section > :nth-child(1) > :nth-child(1) > :nth-child(2) h2::selection {
+  background: none;
+}
 .content .intContent main section > :nth-child(1) > :nth-child(2) > :nth-child(1) {
   width: 100%;
   max-width: 17.5px;
@@ -629,6 +684,13 @@ body {
   color: #072350;
   font-weight: 800;
   font-size: 2rem;
+  cursor: default;
+}
+.content .intContent main nav > :nth-child(1) > div .cajaNum1 .textArea h2::-moz-selection {
+  background: none;
+}
+.content .intContent main nav > :nth-child(1) > div .cajaNum1 .textArea h2::selection {
+  background: none;
 }
 .content .intContent main nav > :nth-child(1) > div .cajaNum1 .contentLine {
   display: -webkit-box;
@@ -679,6 +741,12 @@ body {
   color: #072350;
   font-weight: 800;
   font-size: 0.8rem;
+  cursor: pointer;
+}
+.content .intContent main nav > :nth-child(1) > div .cajaNum1 .textArea2 > :nth-child(1) span:hover {
+  -webkit-text-decoration: 2px solid underline;
+          text-decoration: 2px solid underline;
+  text-underline-offset: 0.15rem;
 }
 .content .intContent main nav > :nth-child(1) > div .cajaNum1 .textArea2 > :nth-child(2) {
   display: -ms-grid;
@@ -699,6 +767,11 @@ body {
 }
 .content .intContent main nav > :nth-child(1) > div .cajaNum1 .textArea2 > :nth-child(2) > div img {
   width: 100%;
+}
+.content .intContent main nav > :nth-child(1) > div .cajaNum1 .pene > :nth-child(1) span {
+  -webkit-text-decoration: 2px solid underline;
+          text-decoration: 2px solid underline;
+  text-underline-offset: 0.15rem;
 }
 .content .intContent main nav > :nth-child(2) {
   width: 50%;
@@ -746,6 +819,15 @@ body {
   all: unset;
   color: white;
 }
+.content .intContent main nav > :nth-child(2) > div > div .cajaNum2 h2, .content .intContent main nav > :nth-child(2) > div > div .cajaNum2 h3, .content .intContent main nav > :nth-child(2) > div > div .cajaNum3 h2, .content .intContent main nav > :nth-child(2) > div > div .cajaNum3 h3 {
+  cursor: default;
+}
+.content .intContent main nav > :nth-child(2) > div > div .cajaNum2 h3::-moz-selection, .content .intContent main nav > :nth-child(2) > div > div .cajaNum3 h3::-moz-selection {
+  background-color: none;
+}
+.content .intContent main nav > :nth-child(2) > div > div .cajaNum2 h3::selection, .content .intContent main nav > :nth-child(2) > div > div .cajaNum3 h3::selection {
+  background-color: none;
+}
 .content .intContent main nav > :nth-child(2) > div > div .cajaNum2 > :nth-child(1), .content .intContent main nav > :nth-child(2) > div > div .cajaNum3 > :nth-child(1) {
   height: 50%;
   width: 100%;
@@ -785,6 +867,12 @@ body {
 .content .intContent main nav > :nth-child(2) > div > div .cajaNum2 > :nth-child(1) > :nth-child(1) {
   font-size: 3rem;
   font-weight: 500;
+}
+.content .intContent main nav > :nth-child(2) > div > div .cajaNum2 h2::-moz-selection {
+  background: none;
+}
+.content .intContent main nav > :nth-child(2) > div > div .cajaNum2 h2::selection {
+  background: none;
 }
 .content .intContent main nav > :nth-child(2) > div > div .cajaNum3 > :nth-child(1) {
   display: -webkit-box;
@@ -929,6 +1017,52 @@ body {
   }
 }
 @media (max-width: 500px) {
+  body {
+    overflow: auto;
+  }
+  body .content {
+    position: absolute;
+    z-index: 10;
+    height: 100%;
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: row wrap;
+            flex-flow: row wrap;
+    place-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    margin: 0 auto;
+  }
+  body .content .intContent {
+    margin: 0 auto;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: column nowrap;
+            flex-flow: column nowrap;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    gap: 2rem;
+    height: 97%;
+    width: 95%;
+  }
+  .animationVideo1 .findVid {
+    -webkit-transform: scale(1) translateY(-110px);
+            transform: scale(1) translateY(-110px);
+  }
+  .bodyOverflowAnimation {
+    overflow: hidden;
+  }
+}
+@media (max-width: 500px) {
   .content .intContent main nav {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -945,7 +1079,7 @@ body {
     gap: 0.75rem;
   }
   .content .intContent main nav > :nth-child(1) > div .cajaNum1 .textArea h2 {
-    font-size: 1.5rem;
+    font-size: 1.65rem;
   }
   .content .intContent main nav > :nth-child(1) > div .cajaNum1 .contentLine {
     gap: 1rem;
@@ -962,44 +1096,209 @@ body {
   }
   .content .intContent main nav > :nth-child(2) {
     width: 100%;
-    gap: 0.5rem;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: column nowrap;
+            flex-flow: column nowrap;
+  }
+  .content .intContent main nav > :nth-child(2) > div {
+    width: 100%;
+  }
+  .content .intContent main nav > :nth-child(2) > div > div {
+    width: 90%;
   }
   .content .intContent main nav > :nth-child(2) > div > div .cajaNum2, .content .intContent main nav > :nth-child(2) > div > div .cajaNum3 {
-    gap: 0rem;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: column nowrap;
+            flex-flow: column nowrap;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    height: 100%;
+    gap: 0.5rem;
+  }
+  .content .intContent main nav > :nth-child(2) > div > div .cajaNum2 h2, .content .intContent main nav > :nth-child(2) > div > div .cajaNum2 h3, .content .intContent main nav > :nth-child(2) > div > div .cajaNum2 p, .content .intContent main nav > :nth-child(2) > div > div .cajaNum3 h2, .content .intContent main nav > :nth-child(2) > div > div .cajaNum3 h3, .content .intContent main nav > :nth-child(2) > div > div .cajaNum3 p {
+    all: unset;
+    color: white;
+  }
+  .content .intContent main nav > :nth-child(2) > div > div .cajaNum2 > :nth-child(1), .content .intContent main nav > :nth-child(2) > div > div .cajaNum3 > :nth-child(1) {
+    height: auto;
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: column wrap;
+            flex-flow: column wrap;
+  }
+  .content .intContent main nav > :nth-child(2) > div > div .cajaNum2 > :nth-child(2), .content .intContent main nav > :nth-child(2) > div > div .cajaNum3 > :nth-child(2) {
+    width: 100%;
+    height: auto;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: column wrap;
+            flex-flow: column wrap;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
   }
   .content .intContent main nav > :nth-child(2) > div > div .cajaNum2 > :nth-child(2) h3, .content .intContent main nav > :nth-child(2) > div > div .cajaNum3 > :nth-child(2) h3 {
-    font-size: 1rem;
+    font-size: 1.1rem;
   }
   .content .intContent main nav > :nth-child(2) > div > div .cajaNum2 > :nth-child(2) p, .content .intContent main nav > :nth-child(2) > div > div .cajaNum3 > :nth-child(2) p {
     font-size: 0.8rem;
+    font-weight: 400;
   }
-  .content .intContent main nav > :nth-child(2) > div > div .cajaNum2 > :nth-child(1) {
-    height: 25%;
+  .content .intContent main nav > :nth-child(2) > div > div .cajaNum2 {
+    gap: 2rem;
   }
   .content .intContent main nav > :nth-child(2) > div > div .cajaNum2 > :nth-child(1) > :nth-child(1) {
-    font-size: 1.5rem;
+    font-size: 3rem;
     font-weight: 500;
   }
   .content .intContent main nav > :nth-child(2) > div > div .cajaNum2 > :nth-child(2) {
-    height: 75%;
+    gap: 2rem;
   }
   .content .intContent main nav > :nth-child(2) > div > div .cajaNum3 > :nth-child(1) {
-    height: 25%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: column wrap;
+            flex-flow: column wrap;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    gap: 2rem;
+  }
+  .content .intContent main nav > :nth-child(2) > div > div .cajaNum3 > :nth-child(1) > :nth-child(1) {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: row wrap;
+            flex-flow: row wrap;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    width: 100%;
   }
   .content .intContent main nav > :nth-child(2) > div > div .cajaNum3 > :nth-child(1) > :nth-child(1) > :nth-child(1) > div {
-    height: 12.5px;
-    width: 12.5px;
+    height: 10px;
+    width: 10px;
   }
   .content .intContent main nav > :nth-child(2) > div > div .cajaNum3 > :nth-child(1) > :nth-child(1) > :nth-child(2) > div {
-    max-width: 35px;
+    max-width: 30px;
   }
   .content .intContent main nav > :nth-child(2) > div > div .cajaNum3 > :nth-child(1) > :nth-child(2) {
-    display: none;
+    display: block;
+    font-size: 0.9rem;
   }
-  .content .intContent main nav > :nth-child(2) > div > div .cajaNum3 > :nth-child(2) {
-    height: 75%;
+}
+.content .intContent main .carousel {
+  overflow: hidden;
+  width: 100%;
+  color: white;
+  background: rgb(0, 0, 0);
+  border-radius: 25px;
+  padding: 4.5px 0px;
+}
+.content .intContent main .carousel p {
+  all: unset;
+  font-size: 0.75rem;
+  cursor: default;
+}
+.content .intContent main .carousel p::-moz-selection {
+  background: none;
+}
+.content .intContent main .carousel p::selection {
+  background: none;
+}
+.content .intContent main .carousel .carousel-inner {
+  -webkit-animation: carousel-scroll 45s linear infinite;
+          animation: carousel-scroll 45s linear infinite;
+  white-space: nowrap;
+}
+@-webkit-keyframes carousel-scroll {
+  0% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
   }
-  .content .intContent main nav > :nth-child(2) > div > div .cajaNum3 > :nth-child(2) p {
-    font-size: 0.8rem;
+  100% {
+    -webkit-transform: translateX(-100%);
+            transform: translateX(-100%);
   }
+}
+@keyframes carousel-scroll {
+  0% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
+  100% {
+    -webkit-transform: translateX(-100%);
+            transform: translateX(-100%);
+  }
+}
+
+.content .intContent main footer {
+  margin: 0 auto;
+  width: 70%;
+  text-align: center;
+  margin-top: 17.5px;
+}
+.content .intContent main footer p {
+  all: unset;
+  font-size: 0.7rem;
+  font-weight: 600;
+  cursor: default;
+}
+.content .intContent main footer p > :nth-child(1) {
+  text-decoration: underline;
+}
+.content .intContent main footer p > :nth-child(2) {
+  font-weight: 900;
+}
+.content .intContent main footer p::-moz-selection {
+  background: none;
+}
+.content .intContent main footer p::selection {
+  background: none;
+}
+
+@media (max-width: 800px) {
+  .content .intContent main footer {
+    width: 85%;
+  }
+}
+@media (max-width: 500px) {
+  .content .intContent main footer {
+    width: 95%;
+  }
+  .content .intContent main footer p {
+    font-size: 0.65rem;
+  }
+}
+.content .intContent .mainContent, .content .intContent .footerContent {
+  -webkit-transform: translateY(50px);
+          transform: translateY(50px);
+  opacity: 0%;
+  -webkit-transition: 1s;
+  transition: 1s;
+}
+.content .intContent .mainContentrAnimation {
+  -webkit-transform: translateY(0px);
+          transform: translateY(0px);
+  opacity: 100%;
+  -webkit-transition: 1s;
+  transition: 1s;
 }
