--- a/CSS/styles.scss
+++ b/CSS/styles.scss
@@ -128,7 +128,7 @@ body{
         }
         .menuClose{
             position: absolute;
-            right: 1%;
+            right: 3%;
             top: 3%;
             >div{
                 width: 100%;
@@ -163,21 +163,76 @@ body{
             }
             >:nth-child(1){
                 transition-delay: 1s;
+                display: none;
             }
             >:nth-child(2){
                 transition-delay: 1.1s;
+                display: none;
             }
             >:nth-child(3){
                 transition-delay: 1.2s;
+                display: none;
             }
             >:nth-child(4){
                 transition-delay: 1.3s;
+                display: none;
             }
             >:nth-child(5){
                 transition-delay: 1.4s;
+                display: none;
             }
             >:nth-child(6){
                 transition-delay: 1.5s;
+            }
+        }
+    }
+}
+
+@media(max-width: 800px){
+    .overlayMenuOpen{
+        >:nth-child(2){
+            >:nth-child(2){
+                >:nth-child(1){
+                    transition-delay: 1s;
+                    display: block;
+                }
+                >:nth-child(2){
+                    transition-delay: 1.1s;
+                    display: block;
+                }
+                >:nth-child(3){
+                    transition-delay: 1.2s;
+                    display: none;
+                }
+                >:nth-child(4){
+                    transition-delay: 1.3s;
+                    display: none;
+                }
+                >:nth-child(5){
+                    transition-delay: 1.4s;
+                    display: none;
+                }
+            }
+        }
+    }
+}
+
+@media(max-width: 500px){
+    .overlayMenuOpen{
+        >:nth-child(2){
+            >:nth-child(2){
+                >:nth-child(3){
+                    transition-delay: 1.2s;
+                    display: block;
+                }
+                >:nth-child(4){
+                    transition-delay: 1.3s;
+                    display: block;
+                }
+                >:nth-child(5){
+                    transition-delay: 1.4s;
+                    display: block;
+                }
             }
         }
     }
@@ -438,6 +493,9 @@ body{
                                 font-size: 1.95rem;
                                 color: white;
                             }
+                            h2::selection{
+                                background: none;
+                            }
                         }
                     }
                     >:nth-child(2){
@@ -536,7 +594,9 @@ body{
     }
 }
 
-// MANEJADOR DE NAV ----------------------
+// MANEJADOR DE SECTION ----------------------
+
+// MANEJADOR DE NAV 
 
 .content{
     .intContent{
@@ -582,6 +642,10 @@ body{
                                     color: $azulOscuro;
                                     font-weight: 800;
                                     font-size: 2rem;
+                                    cursor: default;
+                                }
+                                h2::selection{
+                                    background: none;
                                 }
                             }
                             .contentLine{
@@ -617,6 +681,11 @@ body{
                                         color: $azulOscuro;
                                         font-weight: 800;
                                         font-size: .8rem;
+                                        cursor: pointer;
+                                        &:hover{
+                                            text-decoration: 2px solid underline;
+                                            text-underline-offset: .15rem;
+                                        }
                                     }
                                 }
                                 >:nth-child(2){
@@ -635,6 +704,14 @@ body{
                                         img{
                                             width: 100%;
                                         }
+                                    }
+                                }
+                            }
+                            .pene{
+                                >:nth-child(1){
+                                    span{
+                                        text-decoration: 2px solid underline;
+                                        text-underline-offset: .15rem;
                                     }
                                 }
                             }
@@ -666,6 +743,12 @@ body{
                                 h2, h3, p{
                                     all: unset;
                                     color: white;
+                                }
+                                h2, h3{
+                                    cursor: default;
+                                }
+                                h3::selection{
+                                    background-color: none;
                                 }
                                 >:nth-child(1){
                                     height: 50%;
@@ -699,6 +782,9 @@ body{
                                         font-size: 3rem;
                                         font-weight: 500;
                                     }
+                                }
+                                h2::selection{
+                                    background: none;
                                 }
                             }
                             .cajaNum3{
@@ -867,6 +953,44 @@ body{
     }
 }
 
+// MANEJADOR DE BODY 
+
+@media(max-width: 500px){
+    body{
+        overflow: auto;
+        .content{
+            position: absolute;
+            z-index: 10;
+            height: 100%;
+            width: 100%;
+            display: flex;
+            flex-flow: row wrap;
+            place-content: center;
+            align-items: center;
+            margin: 0 auto;
+            .intContent{
+                margin: 0 auto;
+                display: flex;
+                flex-flow: column nowrap;
+                justify-content: space-between;
+                gap: 2rem;
+                height: 97%;
+                width: 95%;
+            }
+        }
+    }
+    .animationVideo1{
+        .findVid{
+            transform: scale(1) translateY(-110px);
+        } 
+    }
+    .bodyOverflowAnimation{
+        overflow: hidden;
+    }
+}
+
+// MANEJADOR DE BODY ----------------------
+
 @media(max-width: 500px){
     .content{
         .intContent{
@@ -881,7 +1005,7 @@ body{
                                 .textArea{
                                     gap: .75rem;
                                     h2{
-                                        font-size: 1.5rem;
+                                        font-size: 1.65rem;
                                     }
                                 }
                                 .contentLine{
@@ -908,57 +1032,86 @@ body{
                     }
                     >:nth-child(2){
                         width: 100%;
-                        gap: .5rem;
+                        flex-flow: column nowrap;
                         >div{
+                            width: 100%;
                             >div{
+                                width: 90%;
                                 .cajaNum2, .cajaNum3{
-                                    gap: 0rem;
+                                    display: flex;
+                                    flex-flow: column nowrap;
+                                    justify-content: space-between;
+                                    height: 100%;
+                                    gap: .5rem;
+                                    h2, h3, p{
+                                        all: unset;
+                                        color: white;
+                                    }
+                                    
+                                    >:nth-child(1){
+                                        height: auto;
+                                        width: 100%;
+                                        display: flex;
+                                        flex-flow: column wrap;
+                                        
+                                    }
                                     >:nth-child(2){
+                                        width: 100%;
+                                        height: auto;
+                                        display: flex;
+                                        flex-flow: column wrap;
+                                        justify-content: space-between;
                                         h3{
-                                            font-size: 1rem;
+                                            font-size: 1.1rem;
                                         }
                                         p{
                                             font-size: .8rem;
+                                            font-weight: 400;
                                         }
                                     }
                                 }
                                 .cajaNum2{
+                                    gap: 2rem;
                                     >:nth-child(1){
-                                        height: 25%;
                                         >:nth-child(1){
-                                            font-size: 1.5rem;
+                                            font-size: 3rem;
                                             font-weight: 500;
                                         }
                                     }
                                     >:nth-child(2){
-                                        height: 75%;
+                                        gap: 2rem;
                                     }
                                 }
                                 .cajaNum3{
                                     >:nth-child(1){
-                                        height: 25%;
+                                        display: flex;
+                                        flex-flow: column wrap;
+                                        justify-content: space-between;
+                                        gap: 2rem;
                                         >:nth-child(1){
+                                            display: flex;
+                                            flex-flow: row wrap;
+                                            justify-content: space-between;
+                                            width: 100%;
                                             >:nth-child(1){
                                                 >div{
-                                                    height: 12.5px;
-                                                    width: 12.5px;
+                                                    height: 10px;
+                                                    width: 10px;
                                                 }
-                                                
                                             }
                                             >:nth-child(2){
                                                 >div{
-                                                    max-width: 35px;
+                                                    max-width: 30px;
                                                 }
                                             }
                                         }
                                         >:nth-child(2){
-                                            display: none;
+                                            display: block;
+                                            font-size: .9rem;
                                         }
                                     }
                                     >:nth-child(2){
-                                        height: 75%;
                                         p{
-                                            font-size: .8rem;
                                         }
                                     }
                                 }
@@ -970,7 +1123,117 @@ body{
         }
     }
 }
-
 // MANEJADOR DE NAV ----------------------
 
+// MANEJADOR DE CAROUSEL 
 
+.content{
+    .intContent{
+        main{
+            .carousel{
+                overflow: hidden;
+                width: 100%;
+                color: white;
+                background: rgb(0, 0, 0);
+                border-radius: 25px;
+                padding: 4.5px 0px;
+                p{
+                    all: unset;
+                    font-size: .75rem;
+                    cursor: default;
+                }
+                p::selection{
+                    background: none;
+                }
+                .carousel-inner {
+                    animation: carousel-scroll 45s linear infinite;
+                    white-space: nowrap;
+                  }
+                  @keyframes carousel-scroll {
+                    0% {
+                      transform: translateX(0);
+                    }
+                    100% {
+                      transform: translateX(-100%);
+                    }
+                  }
+            }
+        }
+    }
+}
+
+// MANEJADOR DE CAROUSEL ----------------------
+
+// MANEJADOR DE FOOTER  
+
+.content{
+    .intContent{
+        main{
+            footer{
+                margin: 0 auto;
+                width: 70%;
+                text-align: center;
+                margin-top: 17.5px;
+                p{
+                    all: unset;
+                    font-size: .7rem;
+                    font-weight: 600;
+                    cursor: default;
+                    >:nth-child(1){
+                        text-decoration: underline;
+                    }
+                    >:nth-child(2){
+                        font-weight: 900;
+                    }
+                }
+                p::selection{
+                    background: none;
+                }
+            }
+        }
+    }
+}
+
+@media(max-width:800px){
+    .content{
+        .intContent{
+            main{
+                footer{
+                    width: 85%;
+                }
+            }
+        }
+    }
+}
+
+@media(max-width:500px){
+    .content{
+        .intContent{
+            main{
+                footer{
+                    width: 95%;
+                    p{
+                        font-size: .65rem;
+                    }
+                }
+            }
+        }
+    }
+}
+
+// MANEJADOR DE FOOTER ----------------------
+
+.content{
+    .intContent{
+        .mainContent, .footerContent{
+            transform: translateY(50px);
+            opacity: 0%;
+            transition: 1s;
+        }
+        .mainContentrAnimation{
+            transform: translateY(0px);
+            opacity: 100%;
+            transition: 1s;
+        }
+    }
+}
